# Ankicode

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-18-ankicode-mvp-design.md
e2e/: journey.spec.ts
e2e/fixtures/: mock-invoke.ts
e2e/mocks/: tauri-api-core.ts
extension/: package.json  tsconfig.json  tsconfig.node.json  vite.background.config.ts  vite.config.ts  vite.content.config.ts  vite.popup.config.ts
extension/public/: manifest.json  popup.html
extension/src/: api.test.ts  api.ts  background.ts  content.ts  manifest.test.ts  metadata.test.ts  metadata.ts  outbox.test.ts  outbox.ts  popup.ts
src/: App.css  App.test.tsx  App.tsx  api.ts  main.tsx  root.test.ts  root.ts  scheduleLabel.test.ts  scheduleLabel.ts  timezones.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  daily_queue.rs  integration.rs  learning.rs  lib.rs  main.rs  problems.rs  settings.rs  storage.rs
src-tauri/src/integration/: auth.rs  handlers.rs  mod.rs  server.rs  types.rs
src-tauri/tests/: part2.rs  part3.rs  part4.rs
src/components/: MyList.test.tsx  MyList.tsx  Onboarding.test.tsx  Onboarding.tsx  ProblemDetail.tsx  RatingDialog.test.tsx  RatingDialog.tsx  SettingsPanel.tsx  StreakCelebration.tsx  Today.test.tsx  Today.tsx
