[package]
name = "tauri-app"
version = "0.1.0"
description = "Local-first spaced repetition for coding problems"
authors = ["Ankicode contributors"]
edition = "2021"

[lib]
name = "ankicode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
fsrs = "6.6.1"
